# modern-cpp-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  daily.yml  self-hosted.yml
basic/: CMakeLists.txt  align_demo.cpp  align_test.cpp  benchmark_demo.cpp  common_util.h  constexpr_test.cpp  container_test.cpp  enum_test.cpp  generate_test.cpp  hello.cc  if_switch_test.cpp  initializer_list_test.cpp  lambda_test.cc  lambda_test.cpp  literal_test.cpp  optional_test.cpp  singleton_test.cpp  sizeof_test.cpp  std_bind_test.cpp  structured_binding_test.cpp  thread_test.cpp
cmake/: README.md  common.cmake  target.cmake  tools.cmake
common/: CMakeLists.txt  safe_bool_base.hpp  safe_bool_base_test.cpp  singleton.hpp
contrib/: CMakeLists.txt  README.md
contrib/abseil-cpp-cmake/: CMakeLists.txt
contrib/boringssl-cmake/: CMakeLists.txt
contrib/grpc-cmake/: CMakeLists.txt
contrib/jemalloc-cmake/: CMakeLists.txt
contrib/llvm-cmake/: CMakeLists.txt
contrib/lz4-cmake/: CMakeLists.txt
contrib/poco-cmake/: CMakeLists.txt
contrib/poco-cmake/Foundation/: CMakeLists.txt
contrib/protobuf-cmake/: CMakeLists.txt
contrib/rapidjson-cmake/: CMakeLists.txt
contrib/re2-cmake/: CMakeLists.txt
contrib/zlib-ng-cmake/: CMakeLists.txt
error-tests/: CMakeLists.txt  doctest_test.cpp  entrypoint.cpp  entrypoint_run.sh  use-after-free-demo.c
scripts/: setup-helper-functions.sh  setup-ubuntu.sh
simple-tests/: CMakeLists.txt  boost_filesystem_example.cpp  ex_stats_print.cpp  oboe_demo.cpp
simple-tests/boost/: CMakeLists.txt  intrusive_ptr_test.cpp
simple-tests/folly/: CMakeLists.txt  README.md  dynamic_test.cpp  f14_bench.cpp  f14_test.cpp  futures_test.cpp  json_bench.cpp
simple-tests/llvm-kaleidoscope/: CMakeLists.txt  KaleidoscopeJIT.h  ch2.cpp  ch5.cpp  ch6.cpp  ch7.cpp  ch8.cpp  ch8_main.cpp  run_ch8_main.sh  toy.cpp
simple-tests/poco/: CMakeLists.txt  example.cpp  http_server.cpp  object_pool_test.cpp
simple-tests/proto/: CMakeLists.txt  greeter_client.cpp  greeter_server.cpp  person.proto  person_test.cpp
template/: CMakeLists.txt  CRTP_test.cpp  basics_test.cpp  stack2_test.cpp  stack4_test.cpp  template_basic_test.cpp  tracer_test.cpp  traits_test.cpp
template/basics/: max.hpp  stack1.hpp  stack2.hpp  stack4.hpp  tracer.cpp  tracer.hpp
xsimd-demo/: CMakeLists.txt  LowerUpperBench.cpp  LowerUpperImpl.h  README.md  basic_test.cpp  bit_packing.h  bit_packing_bench.cpp  bit_packing_test.cpp  crc32_bench.cpp  lower_upper_impl_test.cpp  restrict_bench.cpp  simd_test.cpp  simd_util.h  xsimd_aligned_bench.cpp  xsimd_mem_bench.cpp  xsimdjson_test.cpp
